--- a/.gitmodules
+++ b/.gitmodules
@@ -3,3 +3,8 @@
 	url = https://github.com/r-universe-org/cran-to-git
 	shallow = true
 	branch = HEAD
+[submodule "eechidna"]
+	path = eechidna
+	url = https://github.com/jforbes14/eechidna
+	shallow = true
+	registered = true
